--- a/index.html
+++ b/index.html
@@ -1,51 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | [Challenge Name Here]</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Samuel Green
-  Available to Walk
-
-  That sounds great. I’d be happy with that.
-
-  Could you send over some pictures of your dog, please?
-
-  Here are a few pictures. She’s a happy girl!
-
-  Can you make it?
-
-  She looks so happy! The time we discussed works. How long shall I take her out for?
-
-  30 minute walk
-  $29
-
-  1 hour walk
-  $49
-
-  Type a message…
-
-  Simple booking
-
-  Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-  discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor | Chat app CSS illustration</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="preview"></div>
+    <div class="screen">
+      <main class="hero-section">
+        <h1 class="hero-heading">Simple booking</h1>
+        <p class="hero-copy">
+          Stay in touch with our dog walkers through the chat interface. This
+          makes it easy to discuss arrangements and make bookings. Once the walk
+          has been completed you can rate your walker and book again all through
+          the chat.
+        </p>
+      </main>
+      <aside class="illustration-section">
+        <div class="illustration-wrapper">
+          <figure class="phone-illustration">
+            <header class="phone-top-area">
+              <div class="phone-appbar">
+                <div class="back-action">
+                  <i class="chevron-left-icon"></i>
+                </div>
+                <div class="user-info">
+                  <img
+                    src="/images/avatar.jpg"
+                    alt="Samuel Green's photo"
+                    class="appbar-avatar"
+                  />
+                  <div>Samuel Green</div>
+                  <div>Available to Walk</div>
+                </div>
+                <div class="appbar-actions">
+                  <i class="more-vert-icon">…</i>
+                </div>
+              </div>
+            </header>
+            <div class="app-body">
+              <div class="message-group">
+                <div class="message from">
+                  That sounds great. I’d be happy with that.
+                </div>
+                <div class="message from">
+                  Could you send over some pictures of your dog, please?
+                </div>
+              </div>
+              <div class="message-group">
+                <ol class="message to photos">
+                  <li>
+                    <img src="images/dog-image-1.jpg" alt="Happy dog's face" />
+                  </li>
+                  <li>
+                    <img src="images/dog-image-2.jpg" alt="Happy dog sitting" />
+                  </li>
+                  <li>
+                    <img src="images/dog-image-3.jpg" alt="Dog with a branch" />
+                  </li>
+                </ol>
+                <div class="message to">
+                  Here are a few pictures. She’s a happy girl!
+                </div>
+                <div class="message to">Can you make it?</div>
+              </div>
+              <div class="message-group">
+                <div class="message from">
+                  She looks so happy! The time we discussed works. How long
+                  shall I take her out for?
+                </div>
+                <div class="message from input">
+                  <label>
+                    <input type="radio" name="walk-time" id="30-minutes-walk" />
+                    <span class="input-time">30 minute walk</span>
+                    <span class="input-price">$29</span>
+                  </label>
+                </div>
+                <div class="message from input">
+                  <label>
+                    <input type="radio" name="walk-time" id="60-minute-walk" />
+                    <span class="input-time">1 hour walk</span>
+                    <span class="input-price">$49</span>
+                  </label>
+                </div>
+              </div>
+            </div>
+            <!-- <footer class="app-footer">
+              <input type="text" placeholder="Type a message…" />
+              <button type="submit">
+                <i class="chevron-right-icon">></i>
+              </button>
+            </footer> -->
+          </figure>
+        </div>
+      </aside>
+    </div>
+  </body>
 </html>
